@@ -1,0 +1,1 @@
+{"stats": {"integral": 99992.04398380345, "rms": 52.31301758025431, "mean": 50.33948571915946, "minfilled": 0.0, "maxfilled": 179.7856708044941}, "title": "MAIN", "bindata": {"xmin": 0.0, "xmax": 180.0, "nbins": 90, "content": [43854.16802029868, 20.152033155176213, 40.650267080013954, 65.24256989813276, 73.67107972140523, 102.02233659850545, 116.98199637103824, 129.77990512393865, 155.00187320599954, 178.52925887326364, 187.1818657373601, 209.8186652802762, 229.3287607460816, 247.92751111700863, 297.64344982611556, 306.9657417137334, 363.6775158470123, 399.62098612759826, 423.97566447854234, 501.5003383582841, 560.7324597221909, 673.5680174970746, 752.9053495063325, 885.9328801757233, 970.5837458804873, 1091.5845111683548, 1173.8900152277588, 1213.3222722311566, 1242.6413522471582, 1229.482425188382, 1195.55987766518, 1158.8401444202163, 1130.479299452906, 1093.5073166095667, 1093.2252813456012, 1069.2778504959192, 1034.7080859795005, 1024.3561615576216, 1009.1342089401924, 1044.0323416912104, 1020.1825042960011, 964.9456687487262, 978.007962971118, 933.9465443657978, 936.6979853728825, 975.6078358856028, 979.7900281757005, 947.5436103850964, 937.6018411593718, 920.5037412663805, 920.6205173754881, 928.8419161558776, 896.8294368247285, 889.1091980403359, 902.9386007839928, 908.1619376845039, 854.4270748746269, 854.8607210836469, 834.4104045271399, 829.1087722134332, 812.1196191292966, 784.0780708212569, 757.8869595927458, 749.2835146383184, 722.4836344980442, 706.4210250166128, 666.2708319483331, 652.5195882628092, 613.0850796598535, 583.046760250491, 563.667680072012, 546.4540087492965, 518.7789676781799, 480.04326605897757, 440.2047792658656, 423.95217940418183, 402.7007912399907, 378.38786226894507, 364.6250068265471, 305.2170136957136, 305.9948480475082, 263.6912302729551, 217.43271427254092, 199.66670302872345, 164.53977184837547, 140.30408808705354, 115.52359532607421, 82.9992790858359, 52.27351956100129, 12.651856445150601], "errorsq": [20001.274893921585, 4.554952625053002, 9.846515767201755, 16.99614689569624, 19.09502707015858, 26.017584387662506, 30.47525486950582, 34.509967779236995, 40.59502668383444, 48.34522734590156, 49.86500510066936, 56.70905799594199, 64.10644806114207, 68.48131196920177, 85.43572610034504, 88.00183327513906, 108.1879989755321, 123.93738121669806, 132.39245690344558, 161.55940742416288, 184.44688227121796, 231.08626242067484, 261.61993801399814, 314.55190908182027, 350.7507212887581, 402.2846706177028, 431.82084528715876, 452.006510976615, 459.50267651588257, 458.06440124537437, 446.88762772976406, 428.2792234095082, 419.8027847492099, 401.50161966168923, 400.862425073165, 389.8228211483421, 377.3995976497796, 372.5383571785844, 366.5800958809123, 382.98518117740554, 371.32270508137645, 351.6069417694812, 356.0533130273852, 337.0957610502628, 341.5701688008375, 385.95148207198304, 390.91662193671766, 381.76224160054244, 379.5997198697601, 368.80735282301174, 368.5282098576606, 372.8796428205453, 358.5245513603488, 360.1757387888812, 373.1548616676827, 368.58738474564893, 344.8531590324346, 350.2628615242268, 340.6685387150966, 339.2025097161637, 338.0497696553501, 319.3587644963492, 307.7186771291743, 304.57507284422917, 292.19034168587433, 291.59444227327526, 271.35094613651745, 268.14212448639995, 250.3376353673617, 235.136085410665, 228.48914563225273, 221.60990974878973, 218.47442885974723, 193.82355373128752, 176.32880655654773, 170.05807103755652, 161.0862012143136, 155.8234556416009, 154.23294465670378, 126.74649778678891, 125.41130958479246, 108.429200406765, 88.90623487257486, 79.77039513596405, 67.00221326423053, 60.59782668788676, 50.382725483969985, 36.275513078961666, 22.164145553395606, 4.605184655064297]}}
