@@ -1,0 +1,1 @@
+{"stats": {"integral": 99555.5545776563, "rms": 47.711820179550685, "mean": 42.77450026116219, "minfilled": 0.0, "maxfilled": 179.76094222134543}, "title": "MAIN", "bindata": {"xmin": 0.0, "xmax": 180.0, "nbins": 90, "content": [43749.656771767965, 96.9769142599893, 164.19523192704509, 223.1667758604623, 281.834056587224, 358.03859782480606, 426.8265089100935, 459.07788139795304, 514.2560052621179, 566.5280686380869, 617.9721965271376, 665.4749718814236, 721.8283592724755, 758.3782898567293, 791.2379420293473, 857.3890653177717, 896.2496600551717, 916.9489548688867, 948.7745143885384, 948.4847347894482, 971.3051068922299, 970.1585455298003, 1005.1911470204361, 1019.4484455505865, 1023.3496984096353, 1091.7258383749138, 1049.3302122868033, 1050.8276478085872, 1051.0164687079623, 1029.9562670112084, 1072.4130932864484, 1018.7515877794084, 1052.32981996146, 1009.0327411352238, 1016.9925920366358, 999.8546363674309, 963.9127971964767, 951.3750470555573, 979.2587335342307, 918.0067848941552, 944.1109039456435, 883.6689655090779, 893.7133889293184, 871.5393525442229, 845.6964552328963, 923.974522933533, 869.0634535957107, 856.3796553100149, 833.525738771664, 794.4325319437912, 778.4409878103919, 752.8110005789873, 759.6597518308965, 735.5644781085965, 714.545161793482, 712.9816746756521, 661.4229606555513, 640.8123136655802, 592.2572868752055, 626.3082527709525, 569.7422920518702, 550.2139227188758, 555.4413346786675, 528.7352828033856, 490.15850266908114, 494.80804545976366, 472.3795207313742, 446.0263462489176, 395.1521288947284, 389.2702327092442, 355.479312492718, 344.80569519892254, 336.4603728309913, 317.41869471625205, 283.02230739296834, 286.7638494435873, 261.32428503158917, 232.50718889595115, 222.1568056323072, 198.74474756671705, 177.16156125405502, 178.04952263370862, 140.60103072405556, 115.91891368743875, 93.31102114611949, 79.56367485188298, 66.45691423888245, 43.22298864643303, 24.302869085908764, 7.913663477045143], "errorsq": [19879.404367305888, 31.524220738383864, 55.24003885255885, 72.35255624002508, 92.21688585517079, 119.45134410397128, 140.23833469568604, 149.95708557242457, 170.92399909900422, 187.89319346734666, 207.19693796462286, 222.09077345114713, 241.15649135955078, 255.9499359361999, 262.9969934975638, 286.8234393152803, 301.2025347152626, 312.9788455982895, 317.8145640067718, 323.84998789611666, 328.7829471824777, 325.09685988906324, 339.55259958262934, 346.72486656602985, 345.1854926339398, 370.576604568479, 355.0216892027906, 354.312099046936, 358.3645559792192, 344.41865157580014, 363.52878620618065, 343.46626889964784, 356.76576137310207, 337.9868304642678, 347.47144010839196, 334.52072027468125, 320.18004738260834, 317.9291823947631, 332.49692495424557, 306.65766895822867, 315.49856674228, 293.2310300858024, 297.48563245778456, 291.7094189352233, 276.47044150561413, 352.588578485697, 336.9066336638597, 321.679066811837, 309.45013724371034, 297.06539396141625, 292.34741001794566, 277.85569743001673, 293.0338227735285, 272.6540027598772, 264.9933483158257, 268.7785066064956, 244.9717595272449, 237.48675915285338, 215.49513744526735, 233.72616591780843, 205.31208681859, 195.28650635732856, 209.14475805919227, 196.74075603958076, 185.9179064724899, 182.33919182648958, 175.60400181713396, 164.33596716079353, 142.1579773793406, 147.95198975718495, 126.8365358092152, 122.36494153161524, 128.65173228397109, 115.17516908941803, 101.17837792328878, 103.91490567629984, 95.62536137385452, 80.43212686737155, 79.03625910816498, 71.34490958958085, 62.4777626015145, 69.49216043502044, 47.05270988812797, 42.90300268809759, 31.96050369137117, 29.319517484060988, 22.065055999779364, 15.090278965401735, 7.934957625169059, 3.3172071422680593]}}
