@@ -25,7 +25,8 @@ v4.2.13 (work-in-progress)
      * Add testing utilities for easy monitoring that MiniMC output for a
        particular cfg-string does not change in a statistically significant
        manner. This includes utilities for easy inspection and maintenance of
-       the tests in case of detected discrepancies.
+       the tests in case of detected discrepancies. Also add a few new tests
+       using this new feature.
      * Add ChiSquared-CDF approximation functions, needed for histogram
        comparisons to yield approximate p-values without introducing a new
        dependency like scipy.
